# midas-journal-756

Document/: advanced_transforms.aux  advanced_transforms.dvi  advanced_transforms.out  advanced_transforms.ps  advanced_transforms.tex  advanced_transforms.tex.bak  advanced_transforms.toc  references.bib
Document/images/: jacobian.eps
Source/: CMakeLists.txt
Source/BendingEnergy/: itkTransformBendingEnergyPenaltyTerm.h  itkTransformBendingEnergyPenaltyTerm.txx
Source/Transforms/: itkAdvancedBSplineDeformableTransform.h  itkAdvancedBSplineDeformableTransform.txx  itkAdvancedBSplineDeformableTransformBase.h  itkAdvancedBSplineDeformableTransformBase.txx  itkAdvancedCombinationTransform.h  itkAdvancedCombinationTransform.hxx  itkAdvancedIdentityTransform.h  itkAdvancedMatrixOffsetTransformBase.txx  itkAdvancedRigid2DTransform.h  itkAdvancedRigid2DTransform.txx  itkAdvancedTransform.h  itkAdvancedTransform.txx  itkBSplineDerivativeKernelFunction2.h  itkBSplineInterpolationDerivativeWeightFunction.h  itkBSplineInterpolationDerivativeWeightFunction.txx  itkBSplineInterpolationSecondOrderDerivativeWeightFunction.h  itkBSplineInterpolationSecondOrderDerivativeWeightFunction.txx  itkBSplineInterpolationWeightFunction2.h  itkBSplineInterpolationWeightFunction2.txx  itkBSplineInterpolationWeightFunctionBase.h  itkBSplineInterpolationWeightFunctionBase.txx  itkBSplineKernelFunction2.h  itkBSplineSecondOrderDerivativeKernelFunction2.h  itkGridScheduleComputer.h  itkGridScheduleComputer.txx  itkTransformToDeterminantOfSpatialJacobianSource.h  itkTransformToDeterminantOfSpatialJacobianSource.txx
